--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 bin-debug/
 bin-release/
 bin/
+.actionScriptProperties
+.flexLibProperties
+.gradle/
+.project
+build/
 
 # Project property files
 .settings/
